Add modules to yamlRestTest task (but it doesn't work)
Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>